Changed postgres logic for long-term storage of metrics. Added these changes to README.md.

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,11 @@
-# --- Python ---
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-
-# --- Virtualenvs ---
-venv/
-.envrc
-
 # --- IDE ---
-.vscode/
 .idea/
-*.swp
 
 # --- Docker / env ---
 .env
 
-# --- Prometheus / Mosquitto runtime data ---
+# --- Prometheus runtime data ---
 prometheus/data/
-mosquitto/data/
-mosquitto/log/
-
-# --- Misc ---
-*.log
 
 # mpy-workbench
 .mpy-workbench/
