Remove promo-to-postgres solution as it was doing unneccessary data loads from promotheus. Now both Promotheus and Postgres take the data from PICO using MQTT and then they store it to themselves.

--- a/backend/postgress-websocket/Dockerfile
+++ b/backend/postgress-websocket/Dockerfile
@@ -1,13 +1,13 @@
-FROM python:3.11-slim
+FROM python:3.13-slim
 
 WORKDIR /app
 
-# Копируем зависимости
+# Copy dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Копируем код
+# Copy code
 COPY . .
 
-# Запуск сервера
+# Start FastAPI server
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
