--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     image: postgres:latest
     
     volumes:
-      - postgres_data:/var/lib/postgresql  # Проверь имя здесь
+      - postgres_data:/var/lib/postgresql 
     ports:
       - "54827:5432"
     env_file:
@@ -56,7 +56,7 @@ services:
 
   fastapi:
     container_name: fastapi_app
-    build: .
+    build: ./postgress-websocket
     ports:
       - "8000:8000"
     depends_on:
@@ -95,18 +95,6 @@ services:
       - mqtt-exporter
     networks:
       - monitoring
-
-  prom-to-postgres:
-    build: ./prom-to-postgres
-    container_name: prom-to-postgres
-    restart: unless-stopped
-    env_file:
-      - .env
-    depends_on:
-      - prometheus
-      - postgres
-    networks:
-      - monitoring  
 
   grafana:
     image: grafana/grafana:latest
