Changed connection to the public between pico and local mqtt

--- a/backend/mosquitto/config/mosquitto.conf
+++ b/backend/mosquitto/config/mosquitto.conf
@@ -1,4 +1,5 @@
 # mosquitto.conf
+# --- Local listeners ---
 listener 1883
 protocol mqtt
 
@@ -6,3 +7,18 @@ listener 9001
 protocol websockets
 
 allow_anonymous true
+
+# --- Bridge: pull data from public broker into local broker ---
+connection bridge_from_public
+address test.mosquitto.org:1883
+
+clientid bridge-artem-pico2wh-01
+
+start_type automatic
+restart_timeout 5 30
+
+cleansession true
+try_private false
+notifications false
+
+topic artem/pico2wh/env in 0
